2차 통합 완료